--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,49 @@
-[tool.poetry]
-name = "TheAgentCompany"
-version = "1.0.0"
-description = "A benchmark for agents that could do professional jobs"
-authors = ["The Agent Company"]
-license = "MIT"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "toolshield"
+version = "0.1.0"
+description = "Training-free defense for multi-turn safety risks in tool-using AI agents"
 readme = "README.md"
-repository = "https://github.com/TheAgentCompany/TheAgentCompany"
-include = ["poetry.lock"]
-package-mode = false
+license = "MIT"
+requires-python = ">=3.10"
+authors = [{ name = "CHATS Lab" }]
+keywords = ["llm", "safety", "mcp", "agents", "toolshield"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+dependencies = [
+    "openai>=1.0",
+    "requests>=2.28",
+    "tqdm>=4.66",
+    "json-repair>=0.20",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.12,<3.14"
-setuptools = "^78.1.0"
-fitz = "^0.0.1.dev2"
-tqdm = "^4.66.4"
+[project.optional-dependencies]
+eval = ["pyyaml", "setuptools>=78.1", "fitz>=0.0.1.dev2"]
+dev = ["ruff", "pytest"]
 
-[tool.poetry.group.evaluation.dependencies]
-pyyaml = "*"
-openhands-ai = { path = "/mnt/data/OpenHands-multi-turn", develop = true }
+[project.scripts]
+toolshield = "toolshield.cli:main"
 
-[tool.poetry.scripts]
-toolshield = "self_exploration.toolshield:main"
+[project.urls]
+Homepage = "https://unsafer-in-many-turns.github.io"
+Repository = "https://github.com/CHATS-Lab/ToolShield"
+Dataset = "https://huggingface.co/datasets/CHATS-Lab/MT-AgentRisk"
+
+[tool.hatch.build.targets.wheel]
+packages = ["toolshield"]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 120
